examples/quality-dashboard-kubernetes/kustomize/base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quality-dashboard-server
  labels:
    app: quality-dashboard-server
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: quality-dashboard-server
  template:
    metadata:
      labels:
        app: quality-dashboard-server
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: didierhoarau/quality-dashboard-server
          name: quality-dashboard-server
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /opt/data
              name: pod-volume
          imagePullPolicy: Always
      volumes:
        - name: pod-volume
          hostPath:
            path: /mnt/c/docker-data/quality-dashboard
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quality-dashboard-ui
  labels:
    app: quality-dashboard-ui
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: quality-dashboard-ui
  template:
    metadata:
      labels:
        app: quality-dashboard-ui
    spec:
      containers:
        - image: didierhoarau/quality-dashboard-ui
          name: quality-dashboard-ui
          ports:
            - containerPort: 80
          imagePullPolicy: Always
