examples/quality-dashboard-kubernetes/kustomize/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quality-dashboard-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: quality-dashboard-server
---
apiVersion: v1
kind: Service
metadata:
  name: quality-dashboard-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: quality-dashboard-ui
